# hakoake-backend

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TODO.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
malcom/: db.sqlite3.20251105.bak  db.sqlite3.20251114.bak
malcom/commons/: design.py  functions.py  image_coverage.py  instagram_images.py  instagram_post.py  instagram_utils.py  threads_utils.py  youtube_search.py  youtube_utils.py
malcom/commons/tests/: test_design.py  test_functions.py  test_image_coverage.py  test_instagram_images.py  test_instagram_post.py  test_threads_utils.py  test_token_cache.py  test_youtube_utils.py
malcom/houses/: definitions.py  formatting.py  functions.py  models.py  views.py  youtube_utils.py
malcom/houses/crawlers/: __init__.py  antiknock.py  club_quattro.py  club_que.py  crawler.py  cyclone.py  daisy_bar.py  eggman.py  fever_popo.py  garret.py  la_mama.py  loft_project_shelter.py  malcolm.py  pit_zero.py  rockmaykan.py  seventh_floor.py  shibuya_o_nest.py  shinjuku_face.py  shinjuku_marble.py  warp.py
malcom/houses/management/commands/: add_monthlyplaylist_spotlight.py  add_weeklyplaylist_spotlight.py  addwebsite.py  authorize_social_accounts.py  create_monthly_playlist.py  create_weekly_playlist.py  create_weekly_playlist_intro_video.py  fetch_event_images.py  generate_performer_sample.py  generate_playlist_video.py  generate_weekly_playlist_introduction.py  generate_weekly_playlist_video.py  list_monthly_performers.py  list_monthly_playlist.py  list_monthlyplaylist_performers.py  list_tokyo_livehouses.py  list_weekly_playlist.py  list_weeklyplaylist_performers.py  post_monthly_playlist_instagram.py  post_monthly_playlist_threads.py  post_weekly_playlist.py  post_weekly_playlist_instagram.py  post_weekly_playlist_threads.py  reset_collection.py
malcom/houses/migrations/: 0008_alter_performanceschedule_open_time_and_more.py  0009_weeklyplaylist_weeklyplaylistentry.py  0010_add_schedule_url_to_livehousewebsite.py  0011_performanceschedule_event_image.py  0013_add_source_url_to_performanceschedule.py  0015_weeklyplaylist_instagram_story_id.py  0016_set_club_quattro_crawler_class.py  0016_set_cyclone_crawler_class.py  0016_set_seventh_floor_crawler_class.py  0016_set_shinjuku_face_crawler_class.py  0016_set_warp_crawler_class.py
malcom/houses/templates/: PLAYLIST_INTRO_PROMPT.md
malcom/houses/tests/: test_crawlers_club_quattro.py  test_crawlers_crawler.py  test_crawlers_cyclone.py  test_crawlers_garret.py  test_crawlers_pit_zero.py  test_crawlers_seventh_floor.py  test_crawlers_shibuya_o_nest.py  test_crawlers_shinjuku_face.py  test_crawlers_warp.py  test_create_weekly_playlist_reverify.py  test_formatting.py  test_generate_introduction_text.py  test_generate_performer_sample_command.py  test_generate_weekly_playlist_video_command.py  test_instagram_images.py  test_instagram_post.py  test_performer_views.py  test_post_weekly_playlist.py  test_rss.py  test_video_slide_renderers.py  test_views.py
malcom/malcom/: settings.py  urls.py
malcom/performers/: image_fetcher.py  models.py  normalization.py  urls.py  views.py  youtube_search.py
malcom/performers/management/commands/: audit_performer_songs.py  backfill_youtube_sociallinks.py  check_image_coverage.py  clean_band_prefix.py  clean_trailing_chars.py  fetch_performer_images.py  performer_fetch_images.py  performersociallink_fix.py  performersociallink_list.py  performersociallink_verify.py  search_youtube_songs.py  validate_youtube_sociallinks.py
malcom/performers/migrations/: 0005_performer_playlist_weight_and_more.py  0006_add_performer_image_fields.py  0007_performersociallink_verified_datetime.py  0008_performer_fanart_banner_images.py  0009_deduplicate_performersociallinks.py  0010_unique_performer_platform_sociallink.py  0011_performersociallink_is_label.py
malcom/performers/tests/: test_check_image_coverage.py  test_image_fetcher.py  test_normalization.py  test_pending_social_links.py  test_views_verify.py  test_youtube_search.py
malcom/templates/: base.html
malcom/templates/houses/: schedule.html  venue_detail.html
malcom/templates/performers/: detail.html  verify_social_link.html
scripts/: hakoake-check-image-coverage.sh  hakoake-fetch-performer-images.sh  hakoake-gen-video.sh
